kvmtool/tests: fix iso build on debian
Debian and some other distro's don't provide mkisofs due to
licensing concerns. xorrisofs from package xorriso provides
a command-line compatible command in this case. Update the
makefile of tests to pick xorrisofs if mkisofs is not available.

Signed-off-by: Riku Voipio <riku.voipio@linaro.org>
Signed-off-by: Will Deacon <will.deacon@arm.com>

--- a/tests/boot/Makefile
+++ b/tests/boot/Makefile
@@ -1,12 +1,20 @@
 NAME	:= init
 
 OBJ	:= $(NAME).o
+MKISOFS := $(shell which mkisofs)
+ifndef MKISOFS
+MKISOFS := $(shell which xorrisofs)
+endif
 
 all: $(.o)
 	rm -rf rootfs
 	mkdir rootfs
 	gcc -static init.c -o rootfs/init
-	mkisofs rootfs > boot_test.iso
+ifdef MKISOFS
+	$(MKISOFS) rootfs -o boot_test.iso
+else
+	$(error "mkisofs or xorriso needed to build boot_test.iso")
+endif
 
 clean:
 	rm -rf rootfs boot_test.iso
